<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main"
    tools:context="com.example.tracker.auth.login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_sign_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sing_in"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@color/main"
            android:src="@drawable/ic_exit"
            android:visibility="gone" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="11dp"
        android:background="@drawable/bg_sing_in"
        android:paddingHorizontal="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_field_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:hint="@string/hint_user_name"
            android:textColorHint="@color/hint_text_color"
            app:boxCornerRadiusTopEnd="@dimen/dp_10"
            app:boxCornerRadiusTopStart="@dimen/dp_10"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_standart_background" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:hint="@string/hint_password"
            android:textColorHint="@color/hint_text_color"
            app:boxCornerRadiusTopEnd="@dimen/dp_10"
            app:boxCornerRadiusTopStart="@dimen/dp_10"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/background_grey_tracker"
            app:errorEnabled="true"
            app:errorTextColor="@color/error_message_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_field_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_standart_background"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_field_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:textColorHint="@color/hint_text_color"
            android:visibility="gone"
            app:boxCornerRadiusTopEnd="@dimen/dp_10"
            app:boxCornerRadiusTopStart="@dimen/dp_10"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/background_grey_tracker"
            app:errorEnabled="true"
            app:errorTextColor="@color/error_message_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_field_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_standart_background"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/forgot_password"
            android:textColor="@color/main"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/input_field_password"
            app:layout_constraintTop_toBottomOf="@+id/input_field_password" />

        <Button
            android:id="@+id/bt_sing_in_up"
            style="@style/bt_collections"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_48"
            android:layout_marginBottom="@dimen/dp_48"
            android:backgroundTint="@color/background_grey_tracker"
            android:padding="@dimen/dp_24"
            android:text="@string/sing_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_field_confirm_password"
            app:layout_constraintVertical_bias="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_sing_in_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_sing_up"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>
